--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,14 @@
     <link rel="stylesheet" href="css/estilos.css"/>
 </head>
 <body>
-    <h1>ESte es un blogpost</h1>
-    <p>Parrafo de inicio</p>
+    <div id="container">
+        <div id="cabecera">
+        Cabecera
+        </div>
+    <div id="post">
+        <h1>Este es el título atractivo e interesante del post</h1>
+        <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+    </div>
+    </div>
 </body>
 </html>
