--- a/blogpost.html
+++ b/blogpost.html
@@ -17,6 +17,7 @@
         <h1>Este es el título atractivo e interesante del post</h1>
         <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
         <p>Solo es una prueba de version</p>
+        <p>Sub y like</p>
     </div>
     </div>
 </body>
