Agregamos una imagen

--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,7 @@
         </div>
         <div id="post">
         <h1>Este es el título atractivo e interesante del post</h1>
+        <p><img src="imagenes/satoshi.jpg" width="100"></p>
         <p>Vamos a ver si las tíldes funcion!án</p>
         <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
         <p>Solo es una prueba de version</p>
